# IoT-Scale

./: CMakeLists.txt  Doxyfile  partitions.csv  sdkconfig  sdkconfig.old
app/iot-human-scale/: app.json  metro.config.js  package-lock.json  package.json
cert-gen/: certsGen.sh
cert-gen/certs/: server.crt  server.key
cert-gen/main/certs/: ca.crt  fullchain.crt  server.crt  server.key
docs/html/: annotated.html  annotated_dup.js  app__connection__manager_8c.html  app__connection__manager_8c.js  app__connection__manager_8c__incl.map  app__connection__manager_8c__incl.md5  app__connection__manager_8c_a1a4aa1716ed41d3ef23c788bcdbc63ce_cgraph.map  app__connection__manager_8c_a56fc30551431c4c7c6dff275c841f7ab_cgraph.map  app__connection__manager_8c_a56fc30551431c4c7c6dff275c841f7ab_cgraph.md5  app__connection__manager_8c_abc984bc317c57837dcce17cfb08ea7f4_icgraph.map  app__connection__manager_8c_abc984bc317c57837dcce17cfb08ea7f4_icgraph.md5  app__connection__manager_8c_af7c67837c776fcc5d18e9e6285d04577_icgraph.map  app__connection__manager_8h.html  app__connection__manager_8h.js  app__connection__manager_8h__dep__incl.map  app__connection__manager_8h__dep__incl.md5  app__connection__manager_8h__incl.map  app__connection__manager_8h__incl.md5  app__connection__manager_8h_a1a4aa1716ed41d3ef23c788bcdbc63ce_cgraph.md5  app__connection__manager_8h_a3f25602c10b9e778503c81b3b8620080_cgraph.map  app__connection__manager_8h_a3f25602c10b9e778503c81b3b8620080_cgraph.md5  app__connection__manager_8h_af7c67837c776fcc5d18e9e6285d04577_icgraph.md5  app__connection__manager_8h_source.html  bluetooth_8c.html  bluetooth_8c.js  bluetooth_8c__incl.map  bluetooth_8c__incl.md5  bluetooth_8c_a3751d2a71d6a2fab013b5c402ff546bf_icgraph.md5  bluetooth_8c_a558b81a2eb010aca50902a52a9dbc921_cgraph.map  bluetooth_8c_a675642d210f93adacfb836b1d23680f4_icgraph.map  bluetooth_8h.html  bluetooth_8h.js  bluetooth_8h__dep__incl.map  bluetooth_8h__dep__incl.md5  bluetooth_8h__incl.map  bluetooth_8h__incl.md5  bluetooth_8h_a1b1de510b8ab4e2449ccc2b3bd58461a_icgraph.map  bluetooth_8h_a1b1de510b8ab4e2449ccc2b3bd58461a_icgraph.md5  bluetooth_8h_a558b81a2eb010aca50902a52a9dbc921_cgraph.md5  bluetooth_8h_a675642d210f93adacfb836b1d23680f4_icgraph.md5  (+446 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+40 more)
main/: CMakeLists.txt  Doxyfile  main.c
main/app_connection_manager/: app_connection_manager.c  app_connection_manager.h
main/bluetooth/: bluetooth.c  bluetooth.h  bluetooth_common.c  bluetooth_common.h  bluetooth_gap.c  bluetooth_gap.h  bluetooth_gatt.c  bluetooth_gatt.h
main/bluetooth_comm_gatt/: bluetooth_comm_gatt.c  bluetooth_comm_gatt.h
main/bluetooth_nimble/: blue_tooth.c  blue_tooth.h  led.c  led.h
main/body_composition/: body_composition.c  body_composition.h
main/calibration/: calibration.c  calibration.h
main/cert_provision/: cert_provision.c  cert_provision.h
main/certs/: ca.crt  ca.key.pem  ca.pem  ca.srl  fullchain.crt  fullchain.pem  openssl.cnf  privkey.pem  server.crt  server.csr  server.key  server_cert.c  server_cert.h  servercert.pem
main/hx711/: hx711.c  hx711.h
main/kalman_filter/: kalman_filter.c  kalman_filter.h
main/log_utils/: log_utils.h
main/moving_avg/: moving_average.c  moving_average.h
main/prov/: ble_secure_server.c  ble_secure_server.h
main/rest_api/: rest_api.c  rest_api.h
main/sntp_synch/: sntp_synch.c  sntp_synch.h
main/spiffs_manager/: spiffs_manager.c  spiffs_manager.h
main/weight_detection/: weight_detection.c  weight_detection.h
main/weight_manager/: weight_manager.c  weight_manager.h
main/wifi/: wifi_comm.c  wifi_comm.h
main/wifi_https_server/: wifi_https_server.c  wifi_https_server.h
main/wifi_power_management/: wifi_power_management.c  wifi_power_management.h
swig-4.3.1/: Makefile  config.status  preinst-swig
swig-4.3.1/CCache/: ccache-swig  ccache_swig_config.h  config.h  config.status
swig-4.3.1/CCache/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
swig-4.3.1/Examples/: Makefile
swig-4.3.1/Examples/test-suite/c/: Makefile
swig-4.3.1/Examples/test-suite/csharp/: Makefile
swig-4.3.1/Examples/test-suite/d/: Makefile
swig-4.3.1/Examples/test-suite/go/: Makefile
swig-4.3.1/Examples/test-suite/guile/: Makefile
swig-4.3.1/Examples/test-suite/java/: Makefile
swig-4.3.1/Examples/test-suite/javascript/: Makefile
swig-4.3.1/Examples/test-suite/lua/: Makefile
swig-4.3.1/Examples/test-suite/mzscheme/: Makefile
swig-4.3.1/Examples/test-suite/ocaml/: Makefile
swig-4.3.1/Examples/test-suite/octave/: Makefile
swig-4.3.1/Examples/test-suite/perl5/: Makefile
swig-4.3.1/Source/: Makefile
swig-4.3.1/Source/Include/: swigconfig.h
swig-4.3.1/Tools/javascript/: Makefile
swig-4.3.1/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
(+75 files in other folders)
